syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.huel.cloudhub.server.rpc.proto";
option java_outer_classname = "HeartbeatProtos";

message Heartbeat {
  string host = 1;
  int32 port = 2;
  string id = 3;
  // when receive a response contains period from meta server,
  // the server should declare the period it now has.
  optional int32 period = 4;
}

message HeartbeatResponse {
  string errorCode = 1;
  string message = 2;

  // when receive first heartbeat from file-server,
  // the meta server needs respond a standard period
  // for control.
  optional int32 period = 3;
}

service HeartbeatService {
  rpc receiveHeartbeat(Heartbeat) returns (HeartbeatResponse);
}
